overflow problem solved

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 body {
   background: #efede8;
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
 }
 h1 {
   color: white;
